<resources>
    <string name="app_name">Fit Conduit</string>

    <!--Used in AboutActivity-->
    <string name="action_about">About</string>
    <string name="about_toolbar_name">About</string>
    <string name="conduitCalc">Calculator for conduit sizing</string>
    <string name="basedOnWhat">Based on NFPA 70–2005 (National Electrical Code), Chapter 9, Tables 4 and 5. All units in inches</string>
    <string name="notAllMine">Created by Stanley Lin, based on the javascript program by CPM Comm. Engineering</string>
    <string name="aboutHunkOfText">NOTE: actual conduit size to be used on project should be based on project specific requirements and location of conduit run (e.g., if conduit is to be installed across platform ceiling, then a 4" conduit cannot be used due to Program Coordination restrictions). Calculation below provides the smallest conduit that fits the stated cables. To reduce conduit size, you may need to decrease the number of cables to be run in the conduit and possibly install multiple conduits. You may also need to increase the conduit size to meet project-specific constraints.

For power conductors, make sure appropriate conductor gauge is specified for the rated current. The maximum ampacity of conductor can be found in NEC Annex B, Table B.310. From the table, choose the correct AWG and the insulation used for conductor (Article 310, table 310.13 for insulation details). DON'T forget to multiply by correction factor for ambient temperature!</string>

    <!--Used in WireChoiceFragment-->
    <string name="rowWireNumber">Cable %1$d</string>
    <string name="wires">Cables</string>
    <string name="selectConduit">Select conduit type</string>
    <string name="calculate">Calculate</string>

    <!--Used in WireAdapter-->
    <string name="rowWireName">Name: %1$s</string>
    <string name="rowWireAmount">Amount: %1$d</string>
    <string name="od">Od: %1$f</string>

    <!--Used in WireCreatorDialog-->
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="wireAdd">Add a new cable</string>
    <string name="unknownWireAdd">Add a new unnamed cable</string>

    <!--Used in WireEditorDialog-->
    <string name="edit">Edit</string>
    <string name="wireEdit">Edit cable %1$d</string>

    <!--Used in WireDeleteDialog-->
    <string name="delete">Delete</string>
    <string name="deletePrompt">Delete cable %1$d?</string>

    <!--Used in ResultsFragment-->
    <string name="results">Results</string>
    <string name="totalWires">Total amount of cable: %1$d</string>
    <string name="totalWireArea">Total area of cables: %1$f</string>
    <string name="selectedConduit">Conduit type chosen: %1$s</string>
    <string name="minConduitSize">Minimum conduit size: %1$s</string>
    <string name="conduitFillPercent">Conduit fill percent: %1$s%%</string>

    <string name="noWires">No cables inputted</string>
    <string name="tooManyWires">Total cable area exceeded largest available conduit. Try reducing the amount.</string>
    <string name="error">Error</string>

    <!--Used in ???-->
    <string name="hintEnterOd">Enter cable od</string>


</resources>
