<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/choiceContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             tools:context="com.projectsling.fitconduit.ui.WireChoiceFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wires"/>

    <ListView
        android:id="@+id/wireList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/addWireButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wireAdd"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/conduitSpinnerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectConduit"/>

        <Spinner
            android:id="@+id/conduitSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
